# libmoldeo

./: .gitignore  Makefile.am  README  README.data  README.md  autogen.sh  autogen_osx.sh  autogen_x64.sh  buildpkg.sh  configure.ac  configure.ac.gst010  configure.ac.gst1  configure_debug.sh  configure_osx.sh  control.amd64  control.amd64.11.10  control.amd64.min17  control.ubuntu15.amd64  doxygen.bat  doxygen.sh  exportdata.bat  libmoldeo-dev.install.amd64  libmoldeo.pc.in  libmoldeo.pc.in.osx  libmoldeo1.dirs.amd64  libmoldeo1.install.amd64  libmoldeotest.pc.in  moldeoversion.txt  tuio.sh
data/: Makefile.am
doc/: Doxyfile  Doxyfile.french  Doxyfile.spanish  convertir_svg_a_png.bat
libmoldeo/: Makefile.am  mo3dModelManager.cpp  mo3dModelManager.h  mo3ds.cpp  mo3ds.h  moAbstract.cpp  moAbstract.h  moActions.cpp  moActions.h  moArcBall.cpp  moArcBall.h  moArray.h  moArrayH.h  moBasePlugin.h  moBuckets.cpp  moBuckets.h  moConfig.cpp  moConfig.h  moConnectors.cpp  moConnectors.h  moConsole.cpp  moConsole.h  moConsoleState.cpp  moConsoleState.h  moDataManager.cpp  moDataManager.h  moDebugManager.h  moDecoderManager.cpp  moDecoderManager.h  moDeviceCode.h  moEffect.cpp  moEffect.h  moEffectManager.cpp  moEffectManager.h  moEffectState.cpp  moEffectState.h  moEffectTemplate.h  moEventList.cpp  moEventList.h  moFBManager.cpp  (+120 more)
libmoldeo/trunk/: Makefile.TUIO.patch  Makefile.am  Makefile.in  README  README.modules  TODO  aclocal.m4  autogen.sh  buildpkg.sh  config.h.in  configure  configure.ac  configure.in  control.amd64  control.amd64.11.10  libmoldeo-dev.dirs.amd64  libmoldeo-dev.install.amd64  libmoldeo.pc  libmoldeo.pc.in  libmoldeo.pc.xxxx  libmoldeo1.dirs.amd64  libmoldeo1.install.amd64  libmoldeotest.pc.in  libtool
libmoldeo/trunk/data/: Makefile.am
libmoldeo/trunk/include/: moBuckets.h  moConnectors.h  moConsole.h  moDataManager.h  moDebugManager.h  moDsGraph.h  moEffectTemplate.h  moFBManager.h  moFBO.h  moFileManager.h  moFileWrite.h  moGUIManager.h  moIODeviceManager.h  moLuaBase.h  moMasterPlugin.h  moMath.h  moMathCurve.h  moMathFunction.h  moMathNumericalAnalysis.h  moMathQuaternion.h  moMathVector.h  moMathVector4.h  moMotion.h  moOGLFT.h  moP5.h  moParam.h  moPlugin.h  moPreEffect.h  moPrePlugin.h  moPresets.h  moResourceManager.h  moResourcePlugin.h  moScript.h  moShader.h  moSoundManager.h  moTempo.h  moTextureFilter.h  moTextureManager.h  moThread.h  moTimeManager.h  (+3 more)
libmoldeo/trunk/include/3ds/: 3ds.h
libmoldeo/trunk/include/openal/: CWaves.h
libmoldeo/trunk/include/port/: itoa.h  stricmp.h
libmoldeo/trunk/libmoldeo/: Makefile.am  Makefile.in  mo3dModelManager.cpp  mo3dModelManager.h  mo3ds.cpp  mo3ds.h  moAbstract.cpp  moAbstract.h  moActions.cpp  moActions.h  moArcBall.cpp  moArcBall.h  moArray.cpp  moArray.h  moArrayH.h  moBasePlugin.h  moBuckets.cpp  moBuckets.h  moConfig.cpp  moConfig.h  moConnectors.cpp  moConnectors.h  moConsole.cpp  moConsole.h  moConsoleState.cpp  moConsoleState.h  moCoord.h  moDataManager.cpp  moDataManager.h  moDebugManager.cpp  moDebugManager.h  moDecoderManager.cpp  moDecoderManager.h  moDeviceCode.cpp  moDeviceCode.h  moDsGraph.cpp  moDsGraph.h  moEffect.cpp  moEffect.h  moEffectManager.cpp  (+154 more)
libmoldeo/trunk/libmoldeo/openal/: CWaves.cpp  Framework.h  LoadOAL.cpp  aldlist.cpp
libmoldeo/trunk/libmoldeo/port/: getc.h  ptypes.h  strconst.h
libmoldeo/trunk/libmoldeotest/: Makefile  Makefile.am  Makefile.in  moArray.cpp  moTypes.h
libmoldeo/trunk/libmoldeotest/.deps/: libmoldeotest_la-moText.Plo  libmoldeotest_la-moTypes.Plo
libmoldeo/trunk/src/: Makefile.am  mo3dModelManager.cpp  moAbstract.cpp  moArcBall.cpp  moBuckets.cpp  moConfig.cpp  moConnectors.cpp  moDataManager.cpp  moDeviceCode.cpp  moEffect.cpp  moEffectManager.cpp  moEffectState.cpp  moFBO.cpp  moFilterManager.cpp  moGLManager.cpp  moGUIManager.cpp  moGsGraph.cpp  moIODeviceManager.cpp  moIODevicePlugin.cpp  moLunaClasses.cpp  moMasterPlugin.cpp  moMath.cpp  moMathCurve.cpp  moMathDMatrix.cpp  moMathDVector.cpp  moMathFFT.cpp  moMathManager.cpp  moMathMatrix.cpp  moMathQuaternion.cpp  moMathVector3.cpp  moMathVector4.cpp  moMotion.cpp  moOGLFT.cpp  moP5.cpp  moPostPlugin.cpp  moRenderManager.cpp  moResourcePlugin.cpp  moScript.cpp  moScriptManager.cpp  moSequenceEffect.cpp  (+9 more)
libmoldeo/trunk/src/3ds/: 3ds.cpp
libmoldeo/trunk/src/openal/: Framework.cpp
libmoldeo/trunk/test-suite/: Makefile.am  Makefile.in  check_libmoldeo.cpp
libmoldeotest/: Makefile.am  moArray.h  moText.h  moTypes.h  moldeotest.h
origin/trunk/: README  rules.amd64
origin/trunk/libmoldeo/: Makefile.am  mo3ds.cpp  moAbstract.cpp  moArcBall.cpp  moConfig.h  moConsoleState.cpp  moDsGraph.cpp  moDsGraph.h  moFBO.h  moFileManager.cpp  moFileManager.h  moIODeviceManager.h  moLock.cpp  moLunaClasses.h  moMath.h  moMathDMatrix.cpp  moMathQuaternion.h  moPostEffect.cpp  moPostPlugin.cpp  moPreEffect.h  moPrePlugin.cpp  moPresets.h  moResourceManager.h  moResourcePlugin.h  moScriptManager.cpp  moShaderGLSL.h  moText.h  moTextureIndex.cpp  moTimeManager.cpp  moTimer.cpp  moXmlConfig.cpp
origin/trunk/libmoldeotest/: moArrayH.h
test-suite/: Makefile.am  check_libmoldeo.cpp
