AM_CPPFLAGS = $(all_includes)

lib_LTLIBRARY = libmoldeo.la
libmoldeo_la_SOURCES = mo3dModelManager.cpp \
	moAbstract.cpp \
	moArcBall.cpp \
	moBuckets.cpp \
	moConfig.cpp \
	moConnectors.cpp \
	moConsole.cpp \
	moConsoleState.cpp \
	moDataManager.cpp \
	moDebugManager.cpp \
	moDeviceCode.cpp \
	moDsGraph.cpp \
	moEffect.cpp \
	moEffectManager.cpp \
	moEffectState.cpp \
	moEventList.cpp \
	moFBManager.cpp \
	moFBO.cpp \
	moFileManager.cpp \
	moFilterManager.cpp \
	moFontManager.cpp \
	moGLManager.cpp \
	moGsGraph.cpp \
	moGUIManager.cpp \
	moIODeviceManager.cpp \
	moIODevicePlugin.cpp \
	moLock.cpp \
	moLuaBase.cpp \
	moLunaClasses.cpp \
	moMasterEffect.cpp \
	moMasterPlugin.cpp \
	moMath.cpp \
	moMathCurve.cpp \
	moMathDMatrix.cpp \
	moMathDVector.cpp \
	moMathFFT.cpp \
	moMathFunction.cpp \
	moMathFunctionIndex.cpp \
	moMathManager.cpp \
	moMathMatrix.cpp \
	moMathNumericalAnalysis.cpp \
	moMathPolynomial.cpp \
	moMathQuaternion.cpp \
	moMathVector3.cpp \
	moMathVector4.cpp \
	moMathVector.cpp \
	moMoldeoObject.cpp \
	moMotion.cpp \
	moNetManager.cpp \
	moOGLFT.cpp \
	moP5.cpp \
	moParam.cpp \
	moPlugin.cpp \
	moPostEffect.cpp \
	moPostPlugin.cpp \
	moPreConfig.cpp \
	moPreEffect.cpp \
	moPrePlugin.cpp \
	moPresets.cpp \
	moRenderManager.cpp \
	moResourceManager.cpp \
	moResourcePlugin.cpp \
	moSceneEffect.cpp \
	moScript.cpp \
	moScriptManager.cpp \
	moSequenceEffect.cpp \
	moShaderCG.cpp \
	moShader.cpp \
	moShaderGLSL.cpp \
	moShaderManager.cpp \
	moSoundManager.cpp \
	moTempo.cpp \
	moText.cpp \
	moTextFilterParam.cpp \
	moTexture.cpp \
	moTextureFilter.cpp \
	moTextureFilterIndex.cpp \
	moTextureIndex.cpp \
	moTextureManager.cpp \
	moThread.cpp \
	moTimeManager.cpp \
	moTypes.cpp \
	moValue.cpp \
	moVideoGraph.cpp \
	moVideoManager.cpp \
	moXmlConfig.cpp

METASOURCES = AUTO

